2011-02-14  Tony Chang  <tony@chromium.org>

        Reviewed by Dimitri Glazkov.

        <select> elements don't honor border:0px in chromium-linux
        https://bugs.webkit.org/show_bug.cgi?id=51152

        * public/linux/WebThemeEngine.h:
        * src/PlatformBridge.cpp:
        (WebCore::GetWebThemeExtraParams):

2011-02-14  Pavel Podivilov  <podivilov@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: use call frame column to determine execution line in source frame.
        https://bugs.webkit.org/show_bug.cgi?id=54001

        * src/js/Tests.js:
        (.TestSuite.prototype._checkExecutionLine):

2011-02-11  Zhenyao Mo  <zmo@google.com>

        Reviewed by Kenneth Russell.

        [chromium] Allow turning off multisampling through web preference settings
        https://bugs.webkit.org/show_bug.cgi?id=54321

        * public/WebSettings.h: Add a flag for multisampling setting.
        * src/WebSettingsImpl.cpp: Ditto.
        (WebKit::WebSettingsImpl::setOpenGLMultisamplingEnabled):
        * src/WebSettingsImpl.h: Ditto.

2011-02-12  Jochen Eisinger  <jochen@chromium.org>

        Reviewed by Jeremy Orlow.

        Implement IDBObjectStore::clear
        https://bugs.webkit.org/show_bug.cgi?id=54193

        * src/IDBObjectStoreProxy.cpp:
        (WebCore::IDBObjectStoreProxy::clear):
        * src/IDBObjectStoreProxy.h:
        * src/WebIDBObjectStoreImpl.cpp:
        (WebKit::WebIDBObjectStoreImpl::clear):
        * src/WebIDBObjectStoreImpl.h:

2011-02-11  David Grogan  <dgrogan@chromium.org>

        Reviewed by Jeremy Orlow.

        indexeddb: add onBlocked to WebKit::WebIDBCallbacks
        https://bugs.webkit.org/show_bug.cgi?id=54329

        * public/WebIDBCallbacks.h:
        (WebKit::WebIDBCallbacks::onBlocked):

2011-02-11  Adam Klein  <adamk@chromium.org>

        Reviewed by Darin Fisher.

        [fileapi] Add support for filesystem: URI handling
        https://bugs.webkit.org/show_bug.cgi?id=53529
