@@ -1,3 +1,13 @@
+2011-02-14  Jay Soffian  <jaysoffian@gmail.com>
+
+        Reviewed by Darin Fisher.
+
+        Expose checked field of HTMLInputElement to Chromium API
+        https://bugs.webkit.org/show_bug.cgi?id=54333
+
+        * public/WebInputElement.h:
+        * src/WebInputElement.cpp:
+
 2011-02-14  Tony Chang  <tony@chromium.org>
 
         Reviewed by Dimitri Glazkov.
